# agentpay

./: .gitignore  AgentPay_MVP_Plan.docx  README.md  VERIFICATION.md  _MConverter.eu_AgentPay_MVP_Plan.md  docker-compose.yml
.cursor/rules/: agentpay-project.mdc  backend-api.mdc  dashboard-auth.mdc  security.mdc
backend/: .env.example  README.md  SECURITY.md  nixpacks.toml  package-lock.json  package.json  tsconfig.json
backend/scripts/: e2e-curl.sh
backend/src/: config.ts  index.ts
backend/src/db/: client.ts  migrate.ts  seed.ts
backend/src/db/migrations/: 001_initial.sql  002_org_admin_email.sql  003_idempotency_per_agent.sql
backend/src/middleware/: auth.ts  dashboardAuth.ts  rateLimit.ts
backend/src/queue/: index.ts
backend/src/queue/processors/: approvalEmail.ts  stripeCharge.ts
backend/src/redis/: client.ts
backend/src/routes/: approve-decline.test.ts  approve-decline.ts  dashboard-auth.ts  dashboard.ts  payment-request.test.ts  payment-request.ts  stripe-webhook.ts  transactions.ts
backend/src/services/: approvalToken.ts  audit.ts  budget.ts
dashboard/: next.config.js  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/auth/callback/: route.ts
dashboard/app/dashboard/: auth.ts  layout.tsx  page.tsx
examples/: README.md  package.json  run-demo-api-only.js  run-demo.js
scripts/: run-full-e2e.sh
sdk-py/: README.md  pyproject.toml
sdk-py/src/agentpay/: __init__.py  client.py  errors.py
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: client.ts  errors.ts  index.ts
(+2 files in other folders)
